tests/snapshots/turtle_snapshots__snapshot_multilingual_with_comments.snap
---
source: irukame/tests/turtle_snapshots.rs
expression: "gen_from_fixture(\"multilingual\", true)"
---
# Generated by Irukame
# IRUKA   = イルカ = dolphin 🐬
#    KAME = 　カメ = turtle  🐢)
# Package: http://example.org/zoo
# Version: 0.1.0

@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix owl: <http://www.w3.org/2002/07/owl#> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix skos: <http://www.w3.org/2004/02/skos/core#> .
@prefix dc: <http://purl.org/dc/elements/1.1/> .

@prefix : <http://example.org/zoo#> .
@prefix zoo: <http://example.org/zoo/zoo#> .
@prefix math: <http://www.w3.org/2000/10/swap/math#> .

<http://example.org/zoo> rdf:type owl:Ontology
  ; dc:creator "test"
  ; owl:versionInfo "0.1.0" .

# ============================================
# Ontology: http://example.org/zoo/zoo
# File: zoo.dlf
# ============================================

<http://example.org/zoo/zoo> rdfs:isDefinedBy <http://example.org/zoo> .

# Concept: Cat
zoo:Cat rdf:type rdfs:Class
  ; skos:prefLabel "Cat"
  ; rdfs:comment "A cat is a small carnivorous mammal."@en
  ; rdfs:comment "Un chat est un petit mammifère carnivore."@fr
  ; rdfs:comment "A plain untagged remark about cats."
  ; skos:definition "A domesticated feline kept as a companion animal."@en
  ; skos:definition "Un félin domestique gardé comme animal de compagnie."@fr
  ; skos:definition "An untagged feline definition."
  ; rdfs:isDefinedBy <http://example.org/zoo/zoo>
  .

zoo:species rdf:type owl:DatatypeProperty
  ; rdfs:domain zoo:Cat
  ; rdfs:range xsd:string
  ; skos:prefLabel "species"
  ; rdfs:isDefinedBy <http://example.org/zoo/zoo>
  .
